external-crates/move/crates/move-compiler/tests/move_check/warning_suppression/bad_location.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E10004]: invalid usage of known attribute
  ┌─ tests/move_check/warning_suppression/bad_location.move:4:7
  │
4 │     #[allow(unused)]
  │       ^^^^^^^^^^^^^
  │       │
  │       Attribute 'allow' is not expected with a use
  │       Expected to be used with one of the following: module, constant, struct, enum, function

warning[W09001]: unused alias
  ┌─ tests/move_check/warning_suppression/bad_location.move:5:15
  │
5 │     use 0x42::x;
  │               ^ Unused 'use' of alias 'x'. Consider removing it
  │
  = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E10004]: invalid usage of known attribute
  ┌─ tests/move_check/warning_suppression/bad_location.move:7:7
  │
7 │     #[allow(all)]
  │       ^^^^^^^^^^
  │       │
  │       Attribute 'allow' is not expected with a friend
  │       Expected to be used with one of the following: module, constant, struct, enum, function
